# agentora

./: .gitignore  Agentora方案初稿.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  README_EN.md  godot_log.txt  godot_log_new.txt
.cargo/: config.toml
.claude/: settings.local.json
.claude/skills/: .skills-manifest.json
.claude/skills/sofapybase-developer/: SKILL.md
client/: README.md  agentora_bridge.gdextension  agentora_bridge.gdextension.uid  export_presets.cfg  icon.svg.import  mcp_interaction_server.gd  project.godot  screenshot_godot.png.import
client/assets/: svg_to_png.py
client/assets/scenes/: agent_sprite.tscn
client/assets/sprites/: agent.png.import  agent.svg.import  agent_idle.png.import  agent_idle.svg.import  agent_selected.png.import  agent_selected.svg.import  legacy_default.svg.import  structure_default.svg.import  terrain_desert.svg.import  terrain_forest.svg.import  terrain_mountain.svg.import  terrain_plains.svg.import  terrain_water.svg.import
client/assets/textures/: agent_placeholder.tres  legacy_default.png.import  legacy_placeholder.tres  resource_food.png.import  resource_iron.png.import  resource_stone.png.import  resource_water.png.import  resource_wood.png.import  structure_camp.png.import  structure_camp.svg.import  structure_campfire.png.import  structure_campfire.svg.import  structure_default.png.import  structure_fortress.png.import  structure_fortress.svg.import  structure_placeholder.tres  structure_wall.png.import  structure_wall.svg.import  structure_warehouse.png.import  structure_warehouse.svg.import  structure_watchtower.png.import  structure_watchtower.svg.import  terrain_desert.png.import  terrain_forest.png.import  terrain_plains.png.import  (+4 more)
client/config/: user_config.toml
client/scenes/: guide_panel.tscn  main.tscn  narrative_feed.tscn  p2p_panel.tscn  settings_panel.tscn  setup_wizard.tscn  world_view.tscn
client/scripts/: agent_detail_panel.gd  agent_detail_panel.gd.uid  agent_filter.gd  agent_filter.gd.uid  agent_manager.gd  agent_manager.gd.uid  auto_screenshot.gd  auto_screenshot.gd.uid  bridge_accessor.gd  bridge_accessor.gd.uid  camera_controller.gd  camera_controller.gd.uid  channel_selector.gd  channel_selector.gd.uid  guide_panel.gd  guide_panel.gd.uid  main.gd  main.gd.uid  milestone_panel.gd  milestone_panel.gd.uid  motivation_radar.gd  motivation_radar.gd.uid  narrative_feed.gd  narrative_feed.gd.uid  p2p_panel.gd  p2p_panel.gd.uid  settings_panel.gd  settings_panel.gd.uid  setup_wizard.gd  setup_wizard.gd.uid  shared_ui_styles.gd  shared_ui_styles.gd.uid  simulation_bridge.gd  simulation_bridge.gd.uid  state_manager.gd  state_manager.gd.uid  world_renderer.gd  world_renderer.gd.uid
config/: llm.toml  log.toml  sim.toml  sim_node1.toml  sim_node2.toml  sim_node_a.toml  sim_node_b.toml  sim_p2p_node1.toml  sim_p2p_node2.toml  user_config.toml
crates/ai/: Cargo.toml
crates/ai/src/: anthropic.rs  config.rs  fallback.rs  lib.rs  llama.rs  local.rs  model_downloader.rs  openai.rs  parser.rs  provider.rs  retry.rs  rule_engine.rs  types.rs
crates/ai/tests/: llama_backend_tests.rs  llama_provider_tests.rs  test_llm_inference.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: bridge.rs  conversion.rs  icon_processor.rs  lib.rs  logging.rs  simulation_runner.rs  user_config.rs
crates/bridge/tests/: bridge_provider_tests.rs
crates/core/: Cargo.toml
crates/core/src/: decision.rs  legacy.rs  lib.rs  motivation.rs  narrative.rs  prompt.rs  rule_engine.rs  seed.rs  snapshot.rs  types.rs  vision.rs
crates/core/src/agent/: alliance.rs  combat.rs  dialogue.rs  inventory.rs  mod.rs  movement.rs  shadow.rs  social.rs  survival.rs  trade.rs
crates/core/src/decision/: mod.rs  parser.rs  perception.rs  spark.rs  world_state.rs
crates/core/src/memory/: chronicle_db.rs  chronicle_store.rs  fence.rs  mod.rs  short_term.rs  token_budget.rs
crates/core/src/simulation/: agent_loop.rs  config.rs  delta.rs  delta_dispatcher.rs  delta_emitter.rs  memory_recorder.rs  mod.rs  narrative_emitter.rs  npc.rs  p2p_handler.rs  simulation.rs  snapshot_loop.rs  state_builder.rs  tick_loop.rs
crates/core/src/storage/: agent_store.rs  map_store.rs  memory_store.rs  mod.rs  schema.rs  strategy_store.rs  world_store.rs
crates/core/src/strategy/: create.rs  decay.rs  mod.rs  motivation_link.rs  patch.rs  retrieve.rs
crates/core/src/world/: action_result.rs  actions.rs  feedback.rs  generator.rs  legacy.rs  map.rs  milestones.rs  mod.rs  pressure.rs  region.rs  resource.rs  rules.rs  snapshot.rs  structure.rs  tick.rs  types.rs  vision.rs
crates/core/src/world/actions/: legacy.rs  mod.rs  movement.rs  social.rs  survival.rs
crates/core/tests/: strategy_tests.rs  vision_tests.rs
crates/network/: Cargo.toml  README.md
crates/network/docs/: migration-054-to-056.md  nat-traversal-config.md  rollback-guide.md
crates/network/src/: behaviour.rs  codec.rs  config.rs  gossip.rs  lib.rs  libp2p_transport.rs  nat.rs  swarm.rs  transport.rs
crates/network/tests/: benchmark_tests.rs  config_tests.rs  hybrid_strategy_tests.rs  multi_node_tests.rs  nat_status_tests.rs  single_node_tests.rs  two_node_dcutr_tests.rs  two_node_direct_tests.rs  two_node_relay_tests.rs
crates/sync/: Cargo.toml
crates/sync/src/: codec.rs  gcounter.rs  lib.rs  lww.rs  merkle.rs  orset.rs  signature.rs  state.rs  types.rs
openspec/: config.yaml
scripts/: PACKAGING.md  build-bridge-local.bat  build-bridge.bat  build-bridge.sh  build-windows.bat  build-windows.sh  generate_icons.py  run_client.bat  run_client.sh  start_multi_node.sh  start_p2p_dual_node.bat  start_p2p_dual_node.ps1  start_p2p_dual_node.sh  test_llm.bat  test_llm_cuda.bat  test_llm_vulkan.bat
src/: lib.rs
tests/: agent_tests.rs  bridge_config_tests.rs  crdt_tests.rs  decision_tests.rs  json_parse_tests.rs  legacy_tests.rs  llm_local_test.rs  memory_tests.rs  motivation_tests.rs  multi_agent.rs  multi_node.rs  prompt_feedback_tests.rs  responsibility_boundary_tests.rs  single_agent.rs  strategy_tests.rs  tier2_action_tests.rs  tier3_emergence_tests.rs
worldseeds/: default.toml
(+332 files in other folders)
