[package]
name = "agentora-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
tracing-appender = "0.2"
thiserror.workspace = true
anyhow.workspace = true
godot.workspace = true

agentora-core = { workspace = true, features = ["p2p"] }
agentora-ai = { workspace = true }
agentora-network = { workspace = true }

toml = "0.8"
time = { version = "0.3", features = ["macros", "local-offset"] }

[features]
p2p = ["agentora-core/p2p"]

[lib]
crate-type = ["cdylib"]  # GDExtension需要动态库