[package]
name = "agentora-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "local-time"] }
tracing-appender = "0.2"
thiserror.workspace = true
anyhow.workspace = true
godot.workspace = true

agentora-core = { workspace = true, features = ["p2p"] }
agentora-ai = { workspace = true }
agentora-network = { workspace = true }

toml = "0.8"
time = { version = "0.3", features = ["macros", "local-offset"] }
image = "0.25"  # 图标缩放处理

[features]
p2p = ["agentora-core/p2p"]

[dev-dependencies]
tempfile = "3.10"

[lib]
crate-type = ["cdylib", "rlib"]  # cdylib 用于 GDExtension, rlib 用于测试