[package]
name = "agentora-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
rusqlite.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
uuid.workspace = true
rand.workspace = true
noise.workspace = true

agentora-ai = { workspace = true }
agentora-sync = { workspace = true }
agentora-network = { workspace = true, optional = true }

sha2 = "0.10"
hex = "0.4"
dirs = "5.0"
serde_yaml = "0.9"

[dev-dependencies]
tokio-test = "0.4"

[features]
p2p = ["agentora-network"]