[package]
name = "agentora-sync"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
anyhow.workspace = true
ed25519-dalek.workspace = true
rand.workspace = true
chrono.workspace = true
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]